actualizacion del proyecto

--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "beistore",
   "version": "1.0.0",
   "description": "proyect Digital House Grupo 4",
-  "main": "./src/app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "run start",
-    "start": "node ./src/app.js"
+    "start": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.12"
+    "mysql2": "^2.3.0",
+    "nodemon": "^2.0.12",
+    "sequelize": "^6.6.5"
   }
 }
